[package]
name = "splice-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.53", default-features = false, features = ["std"] }
fixedbitset = { version = "0.4.1", default-features = false }
itertools = { version = "0.10.3", default-features = false }
pathfinding = { version = "3.0.9", default-features = false }
petgraph = { version = "0.6.0", default-features = false, features = ["stable_graph"] }
relm4 = { version = "0.4.2", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
