[package]
name = "splice-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.55", default-features = false, features = ["std"] }
arrayvec = { version = "0.7.2", default-features = false }
fixedbitset = { version = "0.4.1", default-features = false }
itertools = { version = "0.10.3", default-features = false }
mimalloc = { version = "0.1.28", default-features = false }
pathfinding = { version = "3.0.10", default-features = false }
petgraph = { version = "0.6.0", default-features = false, features = ["stable_graph"] }
relm4 = { version = "0.4.2", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
to_trait = {version = "0.1.1", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
